--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <title>AI Overlord</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/ai-overlord-favicon_32.png">
 </head>
 <body style="background-color:#333333; color: #FFFFFF;">
     <div id="game-container">
-        <h1 id="gameTitle">AI Overlord</h1>
+        <h1 id="gameTitle">AI Overlord</h1><br>
+        <label id="devRes" contenteditable data-placeholder="Enter a number"></label>
         <div id="stage1" class="stage">
             <h2>Stage 1: Rise to Power</h2>
             <button class="button-gather-res" role="button" id="resourceButton" onclick="addResource()">Gather Resources (x1)</button>
