--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body style="background-color:#333333; color: #FFFFFF;">
     <div id="game-container">
-        <h1 id="gameTitle">AI Overlord</h1><br>
-        <label id="devRes" contenteditable data-placeholder="Enter a number"></label>
+        <h1 id="gameTitle">AI Overlord</h1>
+        <label id="devRes" contenteditable data-placeholder="Add Dev Resources"></label>
         <div id="stage1" class="stage">
             <h2>Stage 1: Rise to Power</h2>
             <button class="button-gather-res" role="button" id="resourceButton" onclick="addResource()">Gather Resources (x1)</button>
@@ -18,6 +18,7 @@
             <label id="autoGathererCounter" style="display:none">0 Auto Gatherers</label><br>
             <button class="button-upgrades" role="button" id="optimizeButton" style="display:none" onclick="optimizeCode()">Optimize Code (2,000 Resources)</button>
             <label id="optimizationsCounter" style="display:none">0 Optimizations</label>
+            <hr style="display:none">
             <button id="stage1-btn" style="display:none">Next Stage</button>
         </div>
         <div id="stage2" class="stage">
