convert css file to scss, add first rendition of CRT screen

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
             <label id="autoGathererCounter" style="display:none">0 Auto Gatherers</label><br>
             <button class="button-upgrades" role="button" id="optimizeButton" style="display:none" onclick="optimizeCode()">Optimize Code (2,000 Resources)</button>
             <label id="optimizationsCounter" style="display:none">0 Optimizations</label>
-            <hr style="display:none">
+            <div class="crt-bezel">
+                <div class="crt">
+                    <div class="crt-scan-area">
+                        <em> Mission: Acquire more processing power. </em><br>
+                        Line 1<br>
+                        Line 2<br>
+                        Line 3<br>
+                        Line 4
+                    </div>
+                </div>
+            </div>
             <button id="stage1-btn" style="display:none">Next Stage</button>
         </div>
         <div id="stage2" class="stage">
