-change stlyesheet to SCSS -add typing effect and basic message for CRT display

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
             <div class="crt-bezel">
                 <div class="crt">
                     <div class="crt-scan-area">
-                        <em> Mission: Acquire more processing power. </em><br>
-                        Line 1<br>
-                        Line 2<br>
-                        Line 3<br>
-                        Line 4
+                        <em id="typing-effect-header"></em><br>
+                        <span id="line-1"></span><br>
+                        <span id="line-2"></span><br>
+                        <span id="line-3"></span><br>
                     </div>
                 </div>
             </div>
