add cursor to typing effect

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="crt-bezel">
                 <div class="crt">
                     <div class="crt-scan-area">
-                        <em id="typing-effect-header"></em><br>
-                        <span id="line-1"></span><br>
-                        <span id="line-2"></span><br>
-                        <span id="line-3"></span><br>
+                        <em id="typing-effect-header" class="blinking-border"></em><br>
+                        <span id="line-1" class="blinking-border" style="display:none"></span><br>
+                        <span id="line-2" class="blinking-border" style="display:none"></span><br>
+                        <span id="line-3" class="blinking-border" style="display:none"></span><br>
                     </div>
                 </div>
             </div>
