tweak the math, mild cleanup

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <span id="line-1" class="blinking-border" style="display:none"></span><br>
                         <span id="line-2" class="blinking-border" style="display:none"></span><br>
                         <span id="line-3" class="blinking-border" style="display:none"></span><br>
+                        <span id="line-4" class="blinking-border" style="display:none"></span><br>
                     </div>
                 </div>
             </div>
