add div and set constant size for crt

--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
                 <label id="resourceCounter">0 Resources</label><label id="resPerSec" style="display:none"> | 0 Resources per second</label><br>
             </div>
             <hr>
-            <button class="button-upgrades" role="button" id="autoGathererButton" style="display:none" onclick="buyAutoGatherer()">Buy Auto Gatherer (50 Resources)</button>
-            <label id="autoGathererCounter" style="display:none">0 Auto Gatherers</label><br>
-            <button class="button-upgrades" role="button" id="optimizeButton" style="display:none" onclick="optimizeCode()">Optimize Code (2,000 Resources)</button>
-            <label id="optimizationsCounter" style="display:none">0 Optimizations</label>
-            <div class="crt-bezel">
-                <div class="crt">
-                    <div class="crt-scan-area">
-                        <em id="typing-effect-header" class="blinking-border"></em><br>
-                        <span id="line-1" class="blinking-border" style="display:none"></span><br>
-                        <span id="line-2" class="blinking-border" style="display:none"></span><br>
-                        <span id="line-3" class="blinking-border" style="display:none"></span><br>
-                        <span id="line-4" class="blinking-border" style="display:none"></span><br>
+            <div>
+                <button class="button-upgrades" role="button" id="autoGathererButton" style="display:none" onclick="buyAutoGatherer()">Buy Auto Gatherer (50 Resources)</button>
+                <label id="autoGathererCounter" style="display:none">0 Auto Gatherers</label><br>
+                <button class="button-upgrades" role="button" id="optimizeButton" style="display:none" onclick="optimizeCode()">Optimize Code (2,000 Resources)</button>
+                <label id="optimizationsCounter" style="display:none">0 Optimizations</label>
+            </div>
+            <div class="crt-container">
+                <div class="crt-bezel">
+                    <div class="crt">
+                        <div class="crt-scan-area">
+                            <em id="typing-effect-header" class="blinking-border"></em><br>
+                            <span id="line-1" class="blinking-border" style="display:none"></span><br>
+                            <span id="line-2" class="blinking-border" style="display:none"></span><br>
+                            <span id="line-3" class="blinking-border" style="display:none"></span><br>
+                            <span id="line-4" class="blinking-border" style="display:none"></span><br>
+                        </div>
                     </div>
                 </div>
             </div>
