--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <div class="crt-bezel">
                     <div class="crt">
                         <div class="crt-scan-area">
-                            <em id="typing-effect-header" class="blinking-border"></em><br>
+                            <span id="blank-line" class="blinking-border"></span>
+                            <em id="typing-effect-header" class="blinking-border" style="display:none"></em><br>
                             <span id="line-1" class="blinking-border" style="display:none"></span><br>
                             <span id="line-2" class="blinking-border" style="display:none"></span><br>
                             <span id="line-3" class="blinking-border" style="display:none"></span><br>
