--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <label id="optimizationsCounter" style="display:none">0 Optimizations</label>
                 </div>
                 <div class="right-group">
-                    
+                    <button class="major-upgrades" role="button" id="mainframe-button" style="display: none;">Purchase Mainframe<br>1,000,000 Resources</button>
                 </div>
             </div>
             <div class="crt-container">
