--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         <label id="devRes" contenteditable data-placeholder="Add Dev Resources"></label>
         <div id="stage1" class="stage">
             <h2>Stage 1: Rise to Power</h2>
-            <button class="button-gather-res" role="button" id="resourceButton" 
-                onclick="addResource()">Gather Resources (x1)</button>
-            <button class="button-upgrades" role="button" id="resourceIncreaseButton" style="display:none"
-                onclick="increaseResModifier()">Resource Multiplier (500 Resources)</button><br>
+            <button class="button-gather-res"
+                role="button"
+                id="resourceButton" 
+                onclick="addResource()">Gather Resources (x1)
+            </button>
+            <button class="button-upgrades info-button"
+                role="button"
+                id="resourceIncreaseButton"
+                style="display:none"
+                data-tooltip="Increase the amount of resources you gather manually"
+                onclick="increaseResModifier()">Resource Multiplier (500 Resources)
+            </button><br>
             <hr>
             <div id="resourceBar">
                 <label id="resourceCounter">0 Resources</label>
@@ -25,16 +33,29 @@
             <hr>
             <div class="flex-row">
                 <div class="left-group">
-                    <button class="button-upgrades" role="button" id="autoGathererButton" style="display:none"
-                        onclick="buyAutoGatherer()">Buy Auto Gatherer (50 Resources)</button>
+                    <button class="button-upgrades info-button"
+                        role="button"
+                        id="autoGathererButton"
+                        style="display:none"
+                        data-tooltip="Gathers resources equal to # of Auto Gatherers squared"
+                        onclick="buyAutoGatherer()">Buy Auto Gatherer (50 Resources)
+                    </button>
                     <label id="autoGathererCounter" style="display:none">0 Auto Gatherers</label><br>
-                    <button class="button-upgrades" role="button" id="optimizeButton" style="display:none"
-                        onclick="optimizeCode()">Optimize Code (2,000 Resources)</button>
+                    <button class="button-upgrades info-button"
+                        role="button"
+                        id="optimizeButton"
+                        style="display:none"
+                        data-tooltip="Optimizes code to gather more resources per second"
+                        onclick="optimizeCode()">Optimize Code (2,000 Resources)
+                    </button>
                     <label id="optimizationsCounter" style="display:none">0 Optimizations</label>
                 </div>
                 <div class="right-group">
-                    <button class="major-upgrades" role="button" id="mainframe-button" style="display: none;">
-                        Purchase Mainframe<br>1,000,000 Resources</button>
+                    <button class="major-upgrades"
+                        role="button"
+                        id="mainframe-button"
+                        style="display: none;">Purchase Mainframe<br>500,000 Resources
+                    </button>
                 </div>
             </div>
             <div class="crt-container">
