--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <span class="level-display" id="quantumComputingLevelDisplay">Level 0</span>
                 <!-- Advanced Algorithms Button -->
                 <button class="button-upgrades info-button" id="advancedAlgorithmsButton"
-                    onclick="researchAdvancedAlgorithms()" data-tooltip="Doubles manual resource gathering efficiency">
+                    onclick="researchAdvancedAlgorithms()" data-tooltip="Doubles manual resource gathering efficiency (and unlocks High-Efficiency Auto-Gatherers)">
                     Research Advanced Algorithms <br />(8.00K Processing Power)
                 </button>
                 <span class="level-display" id="advancedAlgorithmsLevelDisplay">Level 0</span>
@@ -134,6 +134,22 @@
                     data-tooltip="Unlocks missions and challenges">
                     Research Global Network Integration <br />(1.20M Processing Power)
                 </button>
+            </div>
+            <!-- Quantum Computing Center Section, initially hidden -->
+            <div id="quantumComputingCenter" style="display: none;">
+                <h3>Quantum Computing Center</h3>
+                <button class="button-upgrades info-button" data-tooltip="THIS IS AN EXAMPLE">
+                    EXAMPLE
+                </button>
+                <span>Level XX</span>
+                <button class="button-upgrades info-button" data-tooltip="THIS IS AN EXAMPLE">
+                    EXAMPLE
+                </button>
+                <span>Level XX</span>
+                <button class="button-upgrades info-button" data-tooltip="THIS IS AN EXAMPLE">
+                    EXAMPLE
+                </button>
+                <span>Level XX</span>
             </div>
             <!-- Missions Section, initially hidden -->
             <div id="missions" style="display: none;">
