--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>AI Overlord</title>
     <!-- Link to CSS file and favicon -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/images/ai-overlord-favicon_32.png" />
+    <link rel="icon" type="image/x-icon" href="images/ai-overlord-favicon_32.ico" />
 </head>
 
 <body>
