small data-tooltip wording change

--- a/index.html
+++ b/index.html
@@ -153,20 +153,20 @@
                 <h3>Research Lab</h3>
                 <!-- Research AI Button -->
                 <button class="button-upgrades info-button" id="researchAIButton" onclick="researchAI()"
-                    data-tooltip="Improves processing power generation">
+                    data-tooltip="Improves processing power generation rate.">
                     Research Neural Network Optimization <br />(1.00K Processing Power)
                 </button>
                 <span class="level-display" id="researchAILevelDisplay">Level 0</span>
                 <!-- Quantum Computing Button -->
                 <button class="button-upgrades info-button" id="quantumComputingButton"
-                    onclick="researchQuantumComputing()" data-tooltip="Doubles processing power generation rate">
+                    onclick="researchQuantumComputing()" data-tooltip="Doubles processing power generation rate.">
                     Research Quantum Computing <br />(5.00K Processing Power)
                 </button>
                 <span class="level-display" id="quantumComputingLevelDisplay">Level 0</span>
                 <!-- Advanced Algorithms Button -->
                 <button class="button-upgrades info-button" id="advancedAlgorithmsButton"
                     onclick="researchAdvancedAlgorithms()"
-                    data-tooltip="Doubles manual resource gathering efficiency (and unlocks High-Efficiency Auto-Gatherers)">
+                    data-tooltip="Unlocks High-Efficiency Auto-Gatherers. Each level doubles manual resource gathering efficiency.">
                     Research Advanced Algorithms <br />(8.00K Processing Power)
                 </button>
                 <span class="level-display" id="advancedAlgorithmsLevelDisplay">Level 0</span>
