styling changes to the Research Lab and Quantum Computing Center

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Link to CSS file and favicon -->
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="images/ai-overlord-favicon_32.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -150,7 +151,7 @@
             </div>
             <!-- Research Lab Section, initially hidden -->
             <div id="researchLab" style="display: none;">
-                <h3>Research Lab</h3>
+                <h3>NeuraVista AI - Research Lab</h3>
                 <!-- Research AI Button -->
                 <button class="button-upgrades info-button" id="researchAIButton" onclick="researchAI()"
                     data-tooltip="Improves processing power generation rate.">
@@ -179,7 +180,7 @@
             </div>
             <!-- Quantum Computing Center Section, initially hidden -->
             <div id="quantumComputingCenter" style="display: none;">
-                <h3>Quantum Computing Center</h3>
+                <h3>Quantum Horizons Institute - Quantum Computing Center</h3>
                 <!-- Quantum Algorithms Button -->
                 <button class="button-upgrades info-button" id="quantumAlgorithmsButton"
                     onclick="quantumAlgorithmsDevelopmentAndTesting()"
