small style change

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <button class="button-upgrades info-button" id="highEfficiencyGathererButton" style="display: none;"
                         data-tooltip="Gathers resources much faster than regular Auto Gatherers"
                         onclick="buyHighEfficiencyGatherer()">
-                        Buy High-Efficiency Auto-Gatherer (3.00K Resources, 5.00K Processing Power)
+                        Buy High-Efficiency Auto-Gatherer <br />(3.00K Resources, 5.00K Processing Power)
                     </button>
                     <span id="highEfficiencyGathererCounter" style="display: none;">0 High-Efficiency
                         Auto-Gatherers</span>
