tweak buttons to stay and update after global ai network and new material discovery

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Overlord</title>
     <!-- Link to CSS file and favicon -->
     <link rel="stylesheet" href="style.css" />
@@ -208,7 +211,7 @@
             </div>
             <!-- Global AI Network Section, initially hidden -->
             <div id="globalAiNetwork" style="display: none;">
-                <h3>Global AI Network</h3>
+                <h3>🤖Global AI Network🤖</h3>
                 <p>Send the AI on missions to gather resources or influence the world.</p>
             </div>
             <!-- Button to proceed to the next stage -->
