--- a/index.html
+++ b/index.html
@@ -13,38 +13,54 @@
 </head>
 
 <body>
+    <!-- Background Music -->
+    <audio id="background-music" src="sounds/synthwave-background-music.mp3" loop></audio>
     <div id="game-container">
         <!-- Header Section -->
         <div class="flex-row">
             <div class="left-group">
                 <h1 id="gameTitle">AI Overlord</h1>
-                <!-- Developer Inputs for adding resources and power during testing -->
-                <div class="dev-tools">
-                    <span id="devModeTools" style="color: red;">DEVMODETOOLS</span><br />
-                    <label id="devRes" contenteditable="true" data-placeholder="Add Dev Resources"></label>
-                    <label id="devPow" contenteditable="true" data-placeholder="Add Dev Power"></label>
-                    <label id="devVip" contenteditable="true" data-placeholder="Add Dev ViperCoin"></label>
-                </div>
             </div>
             <div class="right-group">
                 <!-- Hamburger Menu for settings -->
                 <div id="myNav" class="overlay">
                     <span class="closebtn" onclick="closeNav()">&times;</span>
-                    <div class="overlay-content">
+                    <!-- Add more overlay content as necessary -->
+                    <div class="centered-row">
+                        <!-- Developer Inputs for adding resources and power during testing -->
+                        <div class="dev-tools flex-column">
+                            <span id="devModeTools" style="color: red;">DEVMODETOOLS</span><br />
+                            <div class="flex-row">
+                                <label id="devRes" contenteditable="true" data-placeholder="Add Dev Resources"></label>
+                                <label id="devPow" contenteditable="true" data-placeholder="Add Dev Power"></label>
+                                <label id="devVip" contenteditable="true" data-placeholder="Add Dev ViperCoin"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="centered-row">
+                        <div class="music-player-container">
+                            <!-- Toggle Music -->
+                            <button id="music-toggle-button">🎵 Pause Music</button><br />
+                            <!-- Add a volume slider -->
+                            <label for="volume-slider" style="font-weight: bold;">Volume:</label>
+                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
+                        </div>
+                    </div>
+                    <div class="centered-row">
                         <!-- Toggle Tooltips Option -->
-                        <span>Toggle Tooltips</span>
                         <label class="switch">
                             <input type="checkbox" checked onclick="toggleTooltips()" />
                             <span class="slider round"></span>
                         </label>
+                        <span class="toggle-title">Toggle Tooltips</span>
                     </div>
-                    <div class="overlay-content">
+                    <div class="centered-row">
                         <!-- Toggle Glitch Effect Option -->
-                        <span>Toggle Glitch Effect</span>
                         <label class="switch">
                             <input type="checkbox" id="toggle-glitch" checked onclick="toggleGlitchEffect()" />
                             <span class="slider round"></span>
                         </label>
+                        <span class="toggle-title">Toggle Glitch Effect</span>
                     </div>
                 </div>
                 <!-- Hamburger Icon to open the menu -->
@@ -183,7 +199,7 @@
             </div>
             <!-- Quantum Computing Center Section, initially hidden -->
             <div id="quantumComputingCenter" style="display: none;">
-                <h3>Quantum Horizons Institute - Quantum Computing Center</h3>
+                <h3>Quantum Horizons - Quantum Computing Center</h3>
                 <!-- Quantum Algorithms Button -->
                 <button class="button-upgrades info-button" id="quantumAlgorithmsButton"
                     onclick="quantumAlgorithmsDevelopmentAndTesting()"
