increase toggle size for better readability

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                             <input type="checkbox" checked onclick="toggleTooltips()" />
                             <span class="slider round"></span>
                         </label>
+                        <div class="spacer"></div>
                         <span class="toggle-title">Toggle Tooltips</span>
                     </div>
                     <div class="centered-row">
@@ -60,6 +61,7 @@
                             <input type="checkbox" id="toggle-glitch" checked onclick="toggleGlitchEffect()" />
                             <span class="slider round"></span>
                         </label>
+                        <div class="spacer"></div>
                         <span class="toggle-title">Toggle Glitch Effect</span>
                     </div>
                 </div>
