--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Header Section -->
         <div class="flex-row">
             <div class="left-group">
-                <h1 id="gameTitle">AI Overlord</h1>
+                <h1 class="ai-overlord-title" id="gameTitle">AI Overlord</h1>
             </div>
             <div class="right-group">
                 <!-- Hamburger Menu for settings -->
@@ -42,13 +42,17 @@
                             <h2 id="trackName"><!-- Track Name injected here --></h2>
                             <!-- Toggle Music -->
                             <div class="flex-row" style="margin-bottom: 20px;">
-                                <button id="prev-track-button">⏮️</button>
+                                <button id="prev-track-button">
+                                    <img id src="images/track-prev.svg" width="32" height="32">
+                                </button>
                                 <button id="music-toggle-button">🎵 Pause Music</button>
-                                <button id="next-track-button">⏭️</button><br />
+                                <button id="next-track-button">
+                                    <img src="images/track-next.svg" width="32" height="32">
+                                </button><br />
                             </div>
                             <!-- Add a volume slider -->
                             <label for="volume-slider" style="font-weight: bold;">Volume:</label>
-                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
+                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.3">
                         </div>
                     </div>
                     <div class="centered-row">
@@ -119,7 +123,7 @@
                     <!-- Optimization Button, initially hidden -->
                     <button class="button-upgrades info-button" id="optimizeButton" style="display: none;"
                         data-tooltip="Optimizes code to gather more resources per second" onclick="optimizeCode()">
-                        Optimize Code (2.00K Resources)
+                        Optimize Code (1.00K Resources)
                     </button>
                     <span id="optimizationsCounter" style="display: none;">0 Optimizations</span><br />
                     <!-- High-Efficiency Auto-Gatherer Button, initially hidden -->
@@ -135,7 +139,7 @@
                     <!-- Research Lab Button with Progress Bar, initially hidden -->
                     <button class="major-upgrades" id="research-lab-button" style="display: none;"
                         onclick="purchaseResearchLab()">
-                        Purchase Research Lab <br />(500,000 Resources)
+                        Purchase Research Lab <br />(50,000 Resources)
                         <div id="research-lab-progress" class="progress-bar">
                             <div id="research-lab-progress-fill" class="progress-fill"></div>
                         </div>
