--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <audio id="background-music"></audio>
     <div id="game-container">
         <!-- Header Section -->
-        <div class="flex-row">
+        <div class="flex-row" style="margin-bottom: -50px;">
             <div class="left-group">
                 <h1 class="ai-overlord-title" id="gameTitle">AI Overlord</h1>
             </div>
@@ -45,14 +45,14 @@
                                 <button id="prev-track-button">
                                     <img id src="images/track-prev.svg" width="32" height="32">
                                 </button>
-                                <button id="music-toggle-button">🎵 Pause Music</button>
+                                <button id="music-toggle-button">🎵 Play Music</button>
                                 <button id="next-track-button">
                                     <img src="images/track-next.svg" width="32" height="32">
                                 </button><br />
                             </div>
                             <!-- Add a volume slider -->
                             <label for="volume-slider" style="font-weight: bold;">Volume:</label>
-                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.3">
+                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
                         </div>
                     </div>
                     <div class="centered-row">
@@ -81,7 +81,7 @@
 
         <!-- Stage 1: Initial gameplay stage -->
         <div id="stage1" class="stage active">
-            <h2>Stage 1: Rise to Power</h2>
+            <h2 class="stage-1-title">Stage 1: Rise to Power</h2><br />
             <!-- Resource Gathering Button -->
             <button class="button-gather-res" id="resourceButton" onclick="addResource()">
                 Gather Resources (x1)
@@ -123,14 +123,14 @@
                     <!-- Optimization Button, initially hidden -->
                     <button class="button-upgrades info-button" id="optimizeButton" style="display: none;"
                         data-tooltip="Optimizes code to gather more resources per second" onclick="optimizeCode()">
-                        Optimize Code (1.00K Resources)
+                        Optimize Code (1.000K Resources)
                     </button>
                     <span id="optimizationsCounter" style="display: none;">0 Optimizations</span><br />
                     <!-- High-Efficiency Auto-Gatherer Button, initially hidden -->
                     <button class="button-upgrades info-button" id="highEfficiencyGathererButton" style="display: none;"
                         data-tooltip="Gathers resources much faster than regular Auto Gatherers"
                         onclick="buyHighEfficiencyGatherer()">
-                        Buy High-Efficiency Auto-Gatherer <br />(3.00K Resources, 5.00K Processing Power)
+                        Buy High-Efficiency Auto-Gatherer <br />(5.000K Resources, 3.000K Processing Power)
                     </button>
                     <span id="highEfficiencyGathererCounter" style="display: none;">0 High-Efficiency
                         Auto-Gatherers</span>
@@ -185,27 +185,27 @@
                 <!-- Research AI Button -->
                 <button class="button-upgrades info-button" id="researchAIButton" onclick="researchAI()"
                     data-tooltip="Improves processing power generation rate.">
-                    Research Neural Network Optimization <br />(1.00K Processing Power)
+                    Research Neural Network Optimization <br />(1.000K Processing Power)
                 </button>
                 <span class="level-display" id="researchAILevelDisplay">Level 0</span>
                 <!-- Quantum Computing Button -->
                 <button class="button-upgrades info-button" id="quantumComputingButton"
                     onclick="researchQuantumComputing()" data-tooltip="Doubles processing power generation rate.">
-                    Research Quantum Computing <br />(5.00K Processing Power)
+                    Research Quantum Computing <br />(5.000K Processing Power)
                 </button>
                 <span class="level-display" id="quantumComputingLevelDisplay">Level 0</span>
                 <!-- Advanced Algorithms Button -->
                 <button class="button-upgrades info-button" id="advancedAlgorithmsButton"
                     onclick="researchAdvancedAlgorithms()"
                     data-tooltip="Unlocks High-Efficiency Auto-Gatherers. Each level doubles manual resource gathering efficiency.">
-                    Research Advanced Algorithms <br />(8.00K Processing Power)
+                    Research Advanced Algorithms <br />(8.000K Processing Power)
                 </button>
                 <span class="level-display" id="advancedAlgorithmsLevelDisplay">Level 0</span>
                 <!-- Global Network Integration Button -->
                 <button class="button-upgrades info-button" id="globalNetworkButton"
                     onclick="researchGlobalNetwork()"
                     data-tooltip="Unlocks Global AI Network.">
-                    Research Global Network Integration <br />(120.00M Processing Power)
+                    Research Global Network Integration <br />(120.000M Processing Power)
                 </button>
             </div>
             <!-- Quantum Computing Center Section, initially hidden -->
@@ -215,25 +215,25 @@
                 <button class="button-upgrades info-button" id="quantumAlgorithmsButton"
                     onclick="quantumAlgorithmsDevelopmentAndTesting()"
                     data-tooltip="Increases resource gathering speed.">
-                    Quantum Algorithms Development and Testing <br />(10.00M Resources, 20.00M Processing Power)
+                    Quantum Algorithms Development and Testing <br />(10.000M Resources, 20.000M Processing Power)
                 </button>
                 <span class="level-display" id="quantumAlgorithmsLevelDisplay">Level 0</span>
                 <!-- Quantum Information Button -->
                 <button class="button-upgrades info-button" id="quantumInfoButton"
                     onclick="researchQuantumInformationTheory()" data-tooltip="Increases processing power rate.">
-                    Research Quantum Information Theory <br />(15.00M Resources, 30.00M Processing Power)
+                    Research Quantum Information Theory <br />(15.000M Resources, 30.000M Processing Power)
                 </button>
                 <span class="level-display" id="quantumInfoLevelDisplay">Level 0</span>
                 <!-- Quantum Cryptography Button -->
                 <button class="button-upgrades info-button" id="quantumCryptoButton"
                     onclick="researchCryptographyAndSecurity()" data-tooltip="Unlocks new cryptocurrency. Doubles production rate with each additional level researched.">
-                    Cryptography and Security Research <br />(25.00M Resources, 50.00M Processing Power)
+                    Cryptography and Security Research <br />(25.000M Resources, 50.000M Processing Power)
                 </button>
                 <span class="level-display" id="quantumCryptoLevelDisplay">Level 0</span>
                 <!-- Quantum Material Button -->
                 <button class="button-upgrades info-button" id="quantumMaterialButton" onclick="discoverNewMaterial()"
                     data-tooltip="Discover a brand new material.">
-                    New Material Discovery <br />(100.00B Resources, 250.00B Processing Power)
+                    New Material Discovery <br />(100.000B Resources, 250.000B Processing Power)
                 </button>
             </div>
             <!-- Global AI Network Section, initially hidden -->
