color tweaks, and make testing easier

--- a/index.html
+++ b/index.html
@@ -237,15 +237,9 @@
                 </button>
             </div>
             <!-- Global AI Network Section, initially hidden -->
-            <div id="globalAiNetwork" style="display: none;">
+            <div id="globalAiNetwork" style="display: block;">
                 <h3>🤖Global AI Network🤖</h3>
                 <div class="zoom-controls">
-                    <button id="zoom-in">+</button>
-                    <button id="zoom-out">-</button>
-                    <button id="pan-up">↑</button>
-                    <button id="pan-down">↓</button>
-                    <button id="pan-left">←</button>
-                    <button id="pan-right">→</button>
                     <button id="reset-map">Reset Map Position</button>
                 </div>
                 <div class="global-ai-network-map">
